Prevent collapse arrow from wrapping #14

--- a/scripts/scripts_r/shiny_apps/kinome.org/www/kinome/css/main.css
+++ b/scripts/scripts_r/shiny_apps/kinome.org/www/kinome/css/main.css
@@ -172,3 +172,10 @@ table.dataTable thead th {
 .include-missing-checkbox {
   margin-bottom: 1rem;
 }
+
+ h3,
+  h3 > a,
+  .panel-title,
+  .h3 {
+    white-space: nowrap;
+  }
